fix : screen horizontal scrolling bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,7 @@
 .page-background {
   background-color: #f2f2f2;
 }
+
+body {
+  background-color: #f2f2f2;
+}
